# substrate-DIDOffchainTrade

./: Cargo.toml  README.md
frame/did-offchain-trade/: Cargo.toml
frame/did-offchain-trade/src/: lib.rs  mock.rs  tests.rs
frame/pallet-did/src/: lib.rs
pallets/did-offchain-trade/: Cargo.toml
pallets/did-offchain-trade/rpc/: Cargo.toml
pallets/did-offchain-trade/rpc/runtime-api/: Cargo.toml
pallets/did-offchain-trade/rpc/runtime-api/src/: lib.rs
pallets/did-offchain-trade/rpc/src/: lib.rs
pallets/did-offchain-trade/src/: lib.rs  mock.rs  tests.rs
pallets/pallet-did/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
spec/: spec.md  specjp.md
src/: lib.rs
