[package]
name = "node-template-runtime"
version = "2.0.0-alpha.5"
authors = ["Anonymous"]
edition = "2018"
license = "Unlicense"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }

aura = { version = "2.0.0-alpha.5", default-features = false, package = "pallet-aura", git = 'https://github.com/paritytech/substrate.git', rev = 'd1b9ccad107e4899978858de5ddd2868b9777aab' }
balances = { version = "2.0.0-alpha.5", default-features = false, package = "pallet-balances", git = 'https://github.com/paritytech/substrate.git', rev = 'd1b9ccad107e4899978858de5ddd2868b9777aab' }
frame-support = { version = "2.0.0-alpha.5", default-features = false,  git = 'https://github.com/paritytech/substrate.git', rev = 'd1b9ccad107e4899978858de5ddd2868b9777aab'  }
grandpa = { version = "2.0.0-alpha.5", default-features = false, package = "pallet-grandpa", git = 'https://github.com/paritytech/substrate.git', rev = 'd1b9ccad107e4899978858de5ddd2868b9777aab' }
randomness-collective-flip = { version = "2.0.0-alpha.5", default-features = false, package = "pallet-randomness-collective-flip", git = 'https://github.com/paritytech/substrate.git', rev = 'd1b9ccad107e4899978858de5ddd2868b9777aab' }
sudo = { version = "2.0.0-alpha.5", default-features = false, package = "pallet-sudo", git = 'https://github.com/paritytech/substrate.git', rev = 'd1b9ccad107e4899978858de5ddd2868b9777aab' }
system = { version = "2.0.0-alpha.5", default-features = false, package = "frame-system", git = 'https://github.com/paritytech/substrate.git', rev = 'd1b9ccad107e4899978858de5ddd2868b9777aab' }
timestamp = { version = "2.0.0-alpha.5", default-features = false, package = "pallet-timestamp",  git = 'https://github.com/paritytech/substrate.git', rev = 'd1b9ccad107e4899978858de5ddd2868b9777aab' }
transaction-payment = { version = "2.0.0-alpha.5", default-features = false, package = "pallet-transaction-payment",  git = 'https://github.com/paritytech/substrate.git', rev = 'd1b9ccad107e4899978858de5ddd2868b9777aab' }
frame-executive = { version = "2.0.0-alpha.5", default-features = false,  git = 'https://github.com/paritytech/substrate.git', rev = 'd1b9ccad107e4899978858de5ddd2868b9777aab' }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
sp-api = { version = "2.0.0-alpha.5", default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = 'd1b9ccad107e4899978858de5ddd2868b9777aab' }
sp-block-builder = { default-features = false, version = "2.0.0-alpha.5", git = 'https://github.com/paritytech/substrate.git', rev = 'd1b9ccad107e4899978858de5ddd2868b9777aab' }
sp-consensus-aura = { version = "0.8.0-alpha.3", default-features = false,  git = 'https://github.com/paritytech/substrate.git' }
sp-core = { version = "2.0.0-alpha.5", default-features = false,  git = 'https://github.com/paritytech/substrate.git', rev = 'd1b9ccad107e4899978858de5ddd2868b9777aab' }
sp-inherents = { default-features = false, version = "2.0.0-alpha.5",  git = 'https://github.com/paritytech/substrate.git', rev = 'd1b9ccad107e4899978858de5ddd2868b9777aab' }
sp-offchain = { version = "2.0.0-alpha.5", default-features = false,  git = 'https://github.com/paritytech/substrate.git', rev = 'd1b9ccad107e4899978858de5ddd2868b9777aab' }
sp-runtime = { version = "2.0.0-alpha.5", default-features = false,  git = 'https://github.com/paritytech/substrate.git', rev = 'd1b9ccad107e4899978858de5ddd2868b9777aab' }
sp-session = { version = "2.0.0-alpha.5", default-features = false,  git = 'https://github.com/paritytech/substrate.git', rev = 'd1b9ccad107e4899978858de5ddd2868b9777aab' }
sp-std = { version = "2.0.0-alpha.5", default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = 'd1b9ccad107e4899978858de5ddd2868b9777aab' }
sp-transaction-pool = { version = "2.0.0-alpha.5", default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = 'd1b9ccad107e4899978858de5ddd2868b9777aab' }
sp-version = { version = "2.0.0-alpha.5", default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = 'd1b9ccad107e4899978858de5ddd2868b9777aab' }
did-offchain-trade = { version = "2.0.0-alpha.5", default-features = false, path = "../pallets/did-offchain-trade", package = "pallet-did-offchain-trade" }
pallet-did = { version = "2.0.0-alpha.5", default-features = false, path = "../pallets/pallet-did", package = "pallet-did" }

[dec-dependencies]
sp-io = { version = "2.0.0-alpha.5",  git = 'https://github.com/paritytech/substrate.git', rev = 'd1b9ccad107e4899978858de5ddd2868b9777aab' }

[build-dependencies]
wasm-builder-runner = { version = "1.0.5", package = "substrate-wasm-builder-runner",  git = 'https://github.com/paritytech/substrate.git' }

[features]
default = ["std"]
std = [
	"aura/std",
	"balances/std",
	"codec/std",
	"frame-executive/std",
	"frame-support/std",
	"grandpa/std",
	"randomness-collective-flip/std",
	"serde",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"sudo/std",
	"system/std",
	"timestamp/std",
	"transaction-payment/std",
	"did-offchain-trade/std",
	"pallet-did/std",
]

