[package]
authors = ['Tatsuki Hashimoto']
description = 'FRAME pallet DID offchain trade'
edition = '2018'
license = 'Unlicense'
name = 'pallet-did-offchain-trade'
version = '2.0.0-alpha.3'

[features]
default = ['std']
std = [
    'serde',
    'codec/std',
    'frame-support/std',
    'sp-runtime/std',
    'sp-io/std',
    'timestamp/std',
    'safe-mix/std',
    'system/std',
]

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0.101'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '013c1ee167354a08283fb69915fda56a62fee943'
version = '2.0.0-alpha.3'

[dependencies.safe-mix]
default-features = false
version = '1.0.0'

[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '013c1ee167354a08283fb69915fda56a62fee943'
version = '2.0.0-alpha.3'

[dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '013c1ee167354a08283fb69915fda56a62fee943'
version = '2.0.0-alpha.3'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '013c1ee167354a08283fb69915fda56a62fee943'
version = '2.0.0-alpha.3'

[dependencies.system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'frame-system'
rev = '013c1ee167354a08283fb69915fda56a62fee943'
version = '2.0.0-alpha.3'

[dependencies.did]
default-features = false
path = '../pallet-did'
package = 'pallet-did'

[dependencies.timestamp]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-timestamp'
rev = '3e651110aa06aa835790df63410a29676243fc54'
version = '2.0.0'