[package]
name = "did-offchain-trade-rpc-runtime-api"
version = "2.0.0-alpha.5"
authors = ["Tatsuki Hashimoto"]

[dependencies]
sp-api = { version = '2.0.0-alpha.5', default_features = false}
codec = { package = "parity-scale-codec", version = "1.2.0", default-features = false, features = ["derive"] }
sp-std = { version = "2.0.0-alpha.5", default_features = false }

[dev-dependencies]
serde_json = "1.0.41"

[features]
default = ["std"]
std = [
	"sp-api/std",
	"codec/std",
	"sp-std/std",
]